<?xml version="1.0"?>
<package format="2">
  <name>test_foo</name>
  <version>0.0.0</version>
  <description>The test_foo package</description>

  <maintainer email="shreya@todo.todo">shreya</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/test_foo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
	<depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
